[package]
name = "genin"
version = "0.4.19"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "^1.0", features = ["derive", "serde_derive"]}
serde_yaml = "^0.8"
indexmap = { version = "^1.8", features = ["std","serde"] }
clap = "4"
regex = "^1.5"
env_logger = "^0.9"
log = "^0.4.17"
tabled = { version = "^0.10", features = ["color"]}
